refactor(controller): migrate ActivityController to use DTOs